# moling

./: .gitignore  001_b8542cf6_后台管理-设计系统规范.md  001_b8542cf6_后台管理-设计系统规范_变更记录-2026-06-14.md  001_e24ff30d_UI机密文档.md  003_1e4d402c_moling-new-project.html  003_2144be30_moling-admin-导出报告.md  004_79b91a8b_前端设计系统-主文档.md  004_79b91a8b_前端设计系统-主文档_变更记录-2026-06-14.md  004_79b91a8b_前端设计系统-主文档_补充.md  004_f05ef162_moling-projects.html  008_8e2010d7_moling-workspace.html  009_2b7b5b03_moling-card-combination-algorithm.md  009_2b7b5b03_moling-card-combination-algorithm_变更记录-2026-06-14.md  009_2b7b5b03_moling-card-combination-algorithm_补充.md  010_d04ccd3d_moling-auth.html  012_a7c27b64_墨灵后端设计文档.md  012_a7c27b64_墨灵后端设计文档_API补充.md  012_a7c27b64_墨灵后端设计文档_变更记录-2026-06-14.md  014_ae2d3222_moling-notifications.html  015_54298a88_前后端接口映射.md  016_墨灵前后端集成测试方案.md  018_墨灵部署指南.md  43eb9b7fc2d97f57.md  API_ALIGNMENT_REPORT.md  API映射修复报告-V2.md  CHANGELOG-2026-06-13.md  CHANGELOG-2026-06-15.md  DELIVERY_REPORT.md  DESIGN.md  Makefile  OPENAPI_MANAGEMENT.md  OPENAPI_MANAGEMENT_REPORT.md  PRD_墨灵MVP.md  PROJECT_COMPLETION_REPORT.md  README.md  REMAINING_ISSUES.md  UI美化报告-2026-06-15.md  VIBE_WRITING_DESIGN.md  admin_gap_analysis.md  api-consistency-report.md  (+101 more)
moling-server/: .bandit  .dockerignore  .env.example  API_FIX_REPORT.md  BACKUP_STRATEGY.md  Dockerfile  IMPORT_FIX_REPORT.md  PERFORMANCE_TEST_REPORT.md  PERFORMANCE_TEST_SUMMARY.md  WINDOWS_TROUBLESHOOTING_GUIDE.md  alembic.ini  bandit-report.html  bandit-report.json  check_syntax.py  create_minimal_services.py  create_tables.py  create_tables_sync.py  debug_performance.py  debug_register.py  debug_schema.py  debug_schema2.py  fix_all_app_files.py  fix_all_encodings.py  fix_all_services.py  fix_all_strings.py  fix_all_syntax_errors.py  fix_chinese.py  fix_encoding.py  fix_main.py  fix_project_service.py  fix_routers.py  fix_unicode.py  force_fix_encoding.py  minimal_perf_report.json  performance_automation.py  pyproject.toml  remove_non_ascii.py  requirements.txt  run_performance_tests.py  security-report.md  (+11 more)
moling-server-rs/: .env.example  .gitignore  Cargo.toml  Makefile
moling-server-rs/.cargo/: config.toml
moling-server-rs/crates/moling-api/: Cargo.toml
moling-server-rs/crates/moling-auth/: Cargo.toml
moling-server-rs/crates/moling-core/: Cargo.toml
moling-server-rs/crates/moling-db/: Cargo.toml
moling-server-rs/crates/moling-llm/: Cargo.toml
moling-server-rs/crates/moling-server/: Cargo.toml
moling-server-rs/crates/moling-services/: Cargo.toml
moling-server-rs/crates/moling-worker/: Cargo.toml
moling-server-rs/deploy/: moling.conf
moling-server-rs/docker/: .dockerignore  Dockerfile  docker-compose.prod.yml  docker-compose.test.yml
moling-server-rs/docs/: ARCHITECTURE.md  DESIGN.md  SPECIFICATIONS.md
moling-server-rs/specs/rust-rewrite/: tasks.md
moling-server-rs/target-check/: .rustc_info.json
moling-server/alembic/: env.py
moling-server/alembic/versions/: 0001_initial_schema.py  0002_add_ingest_jobs.py  0003_add_health_check_to_dynamic_layer.py  0004_align_models.py  0005_add_system_config_created_at.py  0006_drop_phase4_task_status.py  0007_add_user_role.py  0008_add_sub_plots.py  c8e0a2417478_rename_tables_to_plural.py
moling-server/app/: config.py  dependencies.py  errors.py  limiter.py  main.py
moling-server/app/auth/: blacklist.py
moling-server/app/core/: __init__.py  di.py  service_registry.py
moling-server/app/dao/: __init__.py  base_dao.py  card_dao.py  chapter_dao.py  dynamic_layer_dao.py  generation_dao.py  health_alert_dao.py  ingest_dao.py  notification_dao.py  phase4_dao.py  project_dao.py  secret_dao.py  subscription_dao.py  system_config_dao.py  template_dao.py  user_dao.py  vault_dao.py
moling-server/app/generation/: __init__.py  jobs_store.py  router.py
moling-server/app/genre/: __init__.py  a1_opening.py  a2_characters.py  a3_hooks.py  a4_rhythm.py  a5_profile_output.py  cold_start_loader.py  models.py
moling-server/app/ingest/: __init__.py  models.py  router.py  service.py
moling-server/app/llm/: __init__.py  client.py  context_budget.py  key_manager.py  prompts.py
moling-server/app/middleware/: __init__.py  audit_log.py  content_length_limit.py  rate_limit.py  request_id.py  response_format.py
moling-server/app/mock/: __init__.py  seed_data.py
moling-server/app/models/: __init__.py  base.py  card_pool.py  chapter.py  draw_history.py  dynamic_layer.py  generation_task.py  health_alert.py  notification.py  phase4_task.py  project.py  secret.py  sub_plot.py  subscription.py  system_config.py  template.py  user.py  vault_changelog.py  vault_character.py  vault_plot_promise.py  vault_timeline.py  vault_world.py
moling-server/app/router/: __init__.py  admin.py  auth.py  card.py  chapter.py  generation.py  genre.py  health.py  notification.py  phase4.py  project.py  project_health.py  secret.py  setting.py  subscription.py  template.py  vault.py  weave.py
moling-server/docs/: E8_implementation_report.md  id-type-unification-plan.md
moling-server/scripts/: backup_pg_dump.py  ci_test_backup.sh  disaster_recovery_drill.py  export_openapi.py  generate_openapi_from_doc.py  monitor_backup.py  schedule_backup.py  setup_windows_tasks.ps1  test_rollback.py
moling-server/tests/: FINAL_TEST_REPORT.md  TEST_EXECUTION_REPORT.md  TEST_REPORT.md  conftest.py  test_card_retire_integration.py  test_cold_start.py  test_confidence_level.py  test_conflict_detection.py  test_direction_scoring.py  test_genre_analysis.py  test_health_monitor.py  test_ingest.py  test_ingest_edge_cases.py  test_key_manager.py  test_merge_service.py  test_middleware_asgi.py  test_phase4_integration.py  test_phase4_scheduler.py  test_phase4_service.py  test_phase4_state_machine.py  test_phase4_transaction.py  test_prompt_assembly.py  test_schemas.py  test_scraper_cleaner.py  test_scraper_extractor.py  test_scraper_splitter.py  test_secret_debt.py  test_services.py  test_sourcetext_verification.py  test_vault_filter.py  test_weaving_scheme.py
moling-web/src-tauri/: Cargo.toml  tauri.conf.json
(+1162 files in other folders)
