[project]
name = "moling-server"
version = "0.1.0"
description = "Moling - AI Novel Creation Platform Backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "greenlet>=3.0.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "celery>=5.5.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5.0",
    "python-multipart>=0.0.18",
    "structlog>=24.4.0",
    "email-validator>=2.2.0",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
    # 监控和错误追踪
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
