[package]
name = "moling-desktop"
version = "0.1.0"
edition = "2021"
description = "墨灵 — Vibe Writing Desktop"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
