[package]
name = "moling-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
moling-core = { path = "../moling-core" }
moling-db = { path = "../moling-db" }

# workspace-managed
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
