[package]
name = "moling-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
moling-core = { path = "../moling-core" }

# database
sea-orm = { workspace = true }
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "sqlx-sqlite"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sea-orm = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
